fixed alignment by disposing of divs

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ textarea {
 .time-block {
     text-align: center;
     border-radius: 15px;
+    font-weight: bold;
 }
 
 .row {
